# esp32-rust-multi-target-template

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
desktop/: Cargo.toml
desktop/src/: main.rs
engine/: Cargo.toml
engine/src/: assets.rs  engine.rs  lib.rs
esp-wrover-kit/: Cargo.toml
esp-wrover-kit/src/: main.rs
esp32-c3-devkit-rust/: Cargo.toml
esp32-c3-devkit-rust/.cargo/: config.toml
esp32-c3-devkit-rust/src/: main.rs
esp32-c6-devkit/: Cargo.toml
esp32-c6-devkit/src/: main.rs
esp32-s2-kaluga/: Cargo.toml
esp32-s2-kaluga/src/: main.rs
esp32-s2-usb-otg/: Cargo.toml
esp32-s2-usb-otg/src/: main.rs
esp32-s3-box/: Cargo.toml
esp32-s3-box/src/: main.rs
esp32-s3-usb-otg/: Cargo.toml
esp32-s3-usb-otg/src/: main.rs
m5core-fire/: Cargo.toml
m5core-fire/src/: main.rs
m5stack-core2/: Cargo.toml
m5stack-core2/src/: main.rs
m5stack-fire/: Cargo.toml  wokwi.toml
m5stack-fire/src/: main.rs
wasm/: Cargo.toml  index.html  index.js  manifest.json
wasm/src/: lib.rs
