[package]
name = "{{crate_name}}-wrover-kit"
version = "0.1.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.3.0"
esp32-hal = "0.7.0"
esp-backtrace = { version = "0.4.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
# esp-println = { version = "0.3.1", features = ["esp32"] }

[dependencies]
embedded-graphics = "0.7"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = { git = "https://github.com/rfuest/mipidsi.git", branch = "display-driver-hal" }
panic-halt = "0.2"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
shared-bus = { version = "0.2.4" }
{{crate_name}}-engine = { path = "../engine", default-features = false, features = [
    "static_maze",
] }
heapless = { version = "0.7.14", default-features = false }
embedded-graphics-framebuf = "0.2.0"

[features]
default = [ "esp_wrover_kit" ]

system_timer = []

button_controls = []
imu_controls = []

esp32 = []
esp32s2 = ["system_timer"]
esp32s3 = []
esp32c3 = ["system_timer"]

# Enable this feature in case you have an ESP32 Wrover Kit with ILI9341
esp_wrover_kit = [ "xtensa-lx-rt", "esp32", "esp32-hal/eh1" ]
