[package]
name = "{{crate_name}}_esp32c6"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
license = "MIT"

[target.riscv32imac-unknown-none-elf.dependencies]
esp32c6-hal = { version = "*", git = "https://github.com/jessebraham/esp-hal.git", branch = "feature/esp32c6" }
esp-backtrace = { version = "0.5.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.11", optional = true }
esp-println = { version = "0.3.1", features = [ "esp32c3" ] }

[dependencies]
esp-alloc = "0.1.0"
embedded-graphics = "0.7"
embedded-hal = "0.2"
display-interface = "0.4"
display-interface-spi = "0.4"
icm42670 = { git = "https://github.com/jessebraham/icm42670/" }
mipidsi = { git = "https://github.com/almindor/mipidsi.git" }
panic-halt = "0.2"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
shared-bus = { version = "0.2.4" }
{{crate_name}}-engine = { path = "../engine", default-features = false, features = [] }
heapless = { version = "0.7.14", default-features = false }
embedded-graphics-framebuf = "0.2.0"

[features]
default = [ "esp32c6_ili9341" ]

system_timer = []

button_controls = []
imu_controls = []

esp32 = []
esp32s2 = ["system_timer"]
esp32s3 = []
esp32c6 = ["system_timer"]

esp32c6_ili9341 = [ "riscv-rt", "esp32c6", "esp32c6-hal/eh1" ]
